# zappy

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustc-ice-2023-11-13T04_52_52-75029.txt
.github/workflows/: pull-request.yml  rust.yml
crates/ai/: Cargo.toml
crates/ai/src/: api.rs  main.rs
crates/bevy-gfx/: Cargo.toml  init_msg  mock_server.py
crates/bevy-gfx/src/: args.rs  draw.rs  main.rs  server_communication.rs  server_message_handlers.rs  user_input.rs
crates/bevy-gfx/src/server_message_handlers/: server_communication.rs
crates/bevy-gfx/src/server_message_handlers/server_communication/: server_message.rs
crates/client/: Cargo.toml
crates/client/src/: args.rs  main.rs  server.rs
crates/client/src/server/: commands.rs  errors.rs
crates/ft-async/: Cargo.toml
crates/ft-async/src/: lib.rs  task_list.rs  task_waker.rs  tasks.rs  waker.rs
crates/ft-async/src/executor/: mod.rs  task_list.rs  task_waker.rs  tasks.rs
crates/ft-async/src/futures/: basic.rs  io.rs  mod.rs  time.rs
crates/ft-async/src/sync/: channel.rs  mod.rs
crates/ft-log/src/: lib.rs
crates/gfx/: Cargo.toml
crates/gfx-tui/: Cargo.toml
crates/gfx-tui/src/: main.rs  update.rs
crates/gfx/src/: app.rs  args.rs  draw.rs  event.rs  game_logic.rs  main.rs  server_message_handlers.rs  tui.rs  ui.rs  update.rs  user_input.rs
crates/gfx/src/app/: state.rs
crates/gfx/src/server_message_handlers/: beep.rs  color_utils.rs  dust_cloud.rs  server_communication.rs
crates/gfx/src/server_message_handlers/server_communication/: server_message.rs
crates/server/: Cargo.toml  build.rs  out.txt
crates/server/.cargo/: config.toml
crates/server/ft-async/src/: lib.rs
crates/server/ft-async/src/executor/: tasks.rs  waker.rs
crates/server/ft-async/src/futures/: basic.rs  mod.rs
crates/server/ft-log/: Cargo.toml
crates/server/ft-log/src/: lib.rs
crates/server/src/: args.rs  client.rs  main.rs  player.rs  rng.rs  server.rs  usage.txt
crates/server/src/gfx_connection/: commands.rs  mod.rs
crates/server/src/player/: command.rs  error.rs  mod.rs  sender.rs  state.rs
crates/server/src/state/: mod.rs  rng.rs  world.rs
