
[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"

[workspace.package]
version = "0.1.0"
authors = [
    "Youva Gaudé <ygaude@student.42.fr>",
    "Tiago Lernould <tlernoul@student.42.fr>",
    "Nils Mathieu <nmathieu@student.42.fr>",
]
readme = "README.md"
edition = "2021"
repository = "https://github.com/Eviber/zappy"
publish = false
