
[workspace]
members = ["crates/client", "crates/gfx"]
exclude = ["crates/server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = [
    "Youva Gaudé <ygaude@student.42.fr>",
    "Tiago Lernould <tlernoul@student.42.fr>",
    "Nils Mathieu <nmathieu@student.42.fr>",
]
readme = "README.md"
edition = "2024"
repository = "https://github.com/Eviber/zappy"
publish = false
