
[workspace]
members = ["crates/bevy-gfx","crates/client", "crates/gfx"]
exclude = ["crates/server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = [
    "Youva Gaudé <ygaude@student.42.fr>",
    "Tiago Lernould <tlernoul@student.42.fr>",
    "Nils Mathieu <nmathieu@student.42.fr>",
]
readme = "README.md"
edition = "2024"
repository = "https://github.com/Eviber/zappy"
publish = false

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
