[package]
name = "bevy-gfx"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy = "0.17"
clap = { version = "4.5", features = ["derive"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
nix = { version = "0.30", features = ["fs"] }
rand = "0.9"
