[package]
name = "ft-async"
version = "0.1.0"
description = "A simple async executor."

edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ft = { git = "https://github.com/nils-mathieu/libft-rs", features = [
    "collections",
] }
