[package]
name = "gfx"
description = "A Zappy graphical monitor."

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.24.1-alpha.2"
crossterm = "0.27"
anyhow = "1.0"