[package]
name = "gfx"
version.workspace = true
authors.workspace = true
readme.workspace = true
edition.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bevy = { version = "0.17", features = ["wav"] }
bevy_hanabi = { version = "0.17", default-features = false, features = ["3d"] }
clap = { version = "4.5", features = ["derive"] }
