[package]
name = "server"
description = "The Zappy server."

edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ft = { git = "https://github.com/nils-mathieu/libft-rs", features = [
    "global-allocator",
    "panic-handler",
    "collections",
] }
ft-async = { path = "../ft-async" }
ft-log = { path = "../ft-log" }
unwinding = { version = "0.2", default-features = false, features = [
    "personality",
] }
