[package]
name = "server"
description = "The Zappy server."

edition.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
readme.workspace = true

[workspace]
members = ["./ft-async", "./ft-async", "."]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = [
    "Youva Gaudé <ygaude@student.42.fr>",
    "Tiago Lernould <tlernoul@student.42.fr>",
    "Nils Mathieu <nmathieu@student.42.fr>",
]
readme = "README.md"
edition = "2021"
repository = "https://github.com/Eviber/zappy"
publish = false

[dependencies]
ft = { git = "https://github.com/nils-mathieu/libft-rs", features = [
    "global-allocator",
    "panic-handler",
    "collections",
] }
ft-async = { path = "./ft-async" }
ft-log = { path = "./ft-log" }
